--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ replay_pid*
 /frontend/node_modules
 /target/maven-status/maven-compiler-plugin/compile
 /target/maven-status
+/target/surefire-reports
