--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=CodeRunner
-server.address=localhost
+server.address=0.0.0.0
 server.port=8080
+server.ssl.enabled=true
+
+# Keystore details
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=000000
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=coderunner
