--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=CodeRunner
 server.address=0.0.0.0
 server.port=8080
 
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.health.show-details=always
+
 server:
 	forward-headers-strategy: native
 	tomcat:
