Add gemini API code, remove env from commits
Removed so I can add the Gemini API key

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+<!--        Non-standard libraries-->
+        <dependency>
+            <groupId>com.google.genai</groupId>
+            <artifactId>google-genai</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
