Implement multi-message chats, code/err/result contexts
Migrate from basic Gemini API to LangChain4j
Set up message api in frontend to work with new backend message API
Built DTOs and reconfigured services to work with the new format

--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,15 @@
 
 <!--        Non-standard libraries-->
         <dependency>
-            <groupId>com.google.genai</groupId>
-            <artifactId>google-genai</artifactId>
-            <version>1.0.0</version>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-google-ai-gemini</artifactId>
+            <version>1.11.0</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.genai</groupId>-->
+<!--            <artifactId>google-genai</artifactId>-->
+<!--            <version>1.0.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
