--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>langchain4j-google-ai-gemini</artifactId>
             <version>1.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-spring-boot-starter</artifactId>
+            <version>1.11.0-beta19</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.google.genai</groupId>-->
 <!--            <artifactId>google-genai</artifactId>-->
